# iowarp-core

./: .gitignore  CMakeLists.txt  README.md  chimaera.yaml  install  run_e2e_gpu_test.sh  run_quick_test.sh
.claude-plugin/plugins/iowarp-contributing/agents/: git-etiquette.md
.claude-plugin/plugins/iowarp-contributing/skills/contributing/: SKILL.md
.claude-plugin/plugins/iowarp-dev-setup/skills/dev-setup/: SKILL.md
CI/: calculate_coverage.sh  validate_marketplace.py
cmake/: AutoConfigureRust.cmake
context-assimilation-engine/core/include/wrp_cae/core/factory/: globus_file_assimilator.h
context-assimilation-engine/core/src/factory/: globus_file_assimilator.cc
context-assimilation-engine/test/integration/globus_matsci/: get_oauth_token.py  matsci_globus_omni.yaml  run_test.sh  wrp_runtime_conf.yaml
context-runtime/include/chimaera/: types.h
context-runtime/modules/bdev/include/chimaera/bdev/: bdev_runtime.h
context-runtime/modules/bdev/src/: bdev_runtime.cc
context-runtime/src/: CMakeLists.txt  transport_explicit_instantiations.cc
context-transfer-engine/: CMakeLists.txt
context-transfer-engine/adapter/: CMakeLists.txt  cae_config.cc
context-transfer-engine/adapter/adios2/: CMakeLists.txt  iowarp_default.xml
context-transfer-engine/adapter/filesystem/: filesystem.h  filesystem_io_client.h
context-transfer-engine/adapter/libfuse/: CMakeLists.txt  fuse_cte.cc  fuse_cte.h
context-transfer-engine/adapter/mapper/: abstract_mapper.h
context-transfer-engine/adapter/mpiio/: CMakeLists.txt  mpiio_api.cc  mpiio_fs_api.h
context-transfer-engine/adapter/stdio/: stdio_api.cc  stdio_fs_api.h
context-transfer-engine/core/: CMakeLists.txt  chimaera_mod.yaml
context-transfer-engine/core/include/wrp_cte/core/: core_client.h  core_runtime.h  core_tasks.h
context-transfer-engine/core/include/wrp_cte/core/autogen/: core_methods.h
context-transfer-engine/core/src/: content_transfer_engine.cc  core_runtime.cc  tag.cc
context-transfer-engine/core/src/autogen/: core_lib_exec.cc
context-transfer-engine/docs/cte/: rust.md
context-transfer-engine/interceptor-ebpf/: CMakeLists.txt  Cargo.toml  EETF_API_MIGRATION.md  rust-toolchain.toml
context-transfer-engine/interceptor-ebpf/.cargo/: config.toml
context-transfer-engine/interceptor-ebpf/interceptor-ebpf/: Cargo.toml
context-transfer-engine/interceptor-ebpf/interceptor-ebpf-common/: Cargo.toml
context-transfer-engine/interceptor-ebpf/interceptor-ebpf-common/src/: lib.rs
context-transfer-engine/interceptor-ebpf/interceptor-ebpf/.cargo/: config.toml
context-transfer-engine/interceptor-ebpf/interceptor-ebpf/src/: main.rs
context-transfer-engine/interceptor-ebpf/interceptor-user/: Cargo.toml
context-transfer-engine/interceptor-ebpf/interceptor-user/src/: main.rs
context-transfer-engine/interceptor-ebpf/xtask/src/: main.rs
context-transfer-engine/test/integration/: CMakeLists.txt
context-transfer-engine/test/integration/fuse/: docker-compose.yaml  run_tests.sh  test_fuse_mount.sh  wrp_config.yaml
context-transfer-engine/test/unit/adapters/: CMakeLists.txt
context-transfer-engine/test/unit/adapters/libfuse/: CMakeLists.txt  test_fuse_adapter.cc
context-transfer-engine/wrapper/: CMakeLists.txt
context-transfer-engine/wrapper/python/: core_bindings.cc
context-transfer-engine/wrapper/rust/: Aneris_intercept_adios.in  Aneris_telemetry.in  Aneris_telemetry_adios.in  Aneris_tune_adios.in  CMakeLists.txt  Cargo.toml  README.md  build.rs  run_telemetry_test.sh  run_tests.sh
context-transfer-engine/wrapper/rust/examples/: blob_monitor.rs  telemetry_capture.rs
context-transfer-engine/wrapper/rust/shim/: shim.cc  shim.h
context-transfer-engine/wrapper/rust/src/: async.rs  capability_detector.rs  error.rs  ffi.rs  ffi_c.rs  frecency_engine.rs  lib.rs  reorg_batch.rs  sync.rs  tests.rs  tier_tracker.rs  types.rs
context-transfer-engine/wrapper/rust/tests/: integration_test.rs  test_frecency_engine.rs
context-transfer-engine/wrapper/rust/tests_frecency/: Cargo.toml  test_main.rs
context-transport-primitives/: CMakeLists.txt
context-transport-primitives/include/hermes_shm/constants/: macros.h
context-transport-primitives/include/hermes_shm/lightbeam/: lightbeam.h  transport_factory_impl.h
