[package]
name = "wrp-cte-rs"
version = "0.2.0"
edition = "2021"
authors = ["IOWarp Team"]
description = "Rust bindings for IOWarp Context Transfer Engine"
license = "BSD-3-Clause"
repository = "https://github.com/iowarp/clio-core"

[lib]
name = "wrp_cte"
crate-type = ["cdylib", "rlib"]

[features]
default = ["async"]
sync = []
async = ["dep:tokio"]

[dependencies]
cxx = "1.0"
tokio = { version = "1.50", optional = true, default-features = false, features = ["rt"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }